@@ -559,6 +559,8 @@ Enable encryption and authentication of block data.
 See your OpenSSL documentation for a list of supported ciphers;
 the default if no cipher is specified is AES-128 CBC.
 .Pp
+Currently, only block ciphers are supported.
+.Pp
 The encryption password may be supplied via one of
 .Fl \-password
 or
